--- a/avaliação individual/assets/css/style.css
+++ b/avaliação individual/assets/css/style.css
@@ -1,33 +1,61 @@
-    *{
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+   *{
         margin: 0;
         padding: 0; 
+        font-family: "inter", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
+    }
+    
+    header nav{
+        background-color: #f2f2f2;
+        padding: 20px 0;
+        display: flex; 
+        justify-content: space-around;
+        align-items: center;
     }
     
     
+    .menu{
+        list-style: none;
+        display: flex;
+        gap: 40px;
+    }
+    
+    .menu li a{
+        text-decoration: none;
+        color: #000000;
+        padding: 8px;
+        border-radius: 8px;
+        text-transform: uppercase;
+        transition: 0.5s;
+    }
+    
+    .menu li a:hover{
+        background-color: #000000;
+        color: rgb(255, 255, 255);
+        transition: 0.5s;
+    }
     
     .logo{
         display: flex;
-        justify-content: left;
-        width: 100px;
-        height: 100px;
-    }
-
-    
-    .menu{
-        display: flex;
-        list-style: none;
-        text-decoration: none;
+       
+        width: 80px;
+        height: 80px;
     }
 
     .foto-perfil{
         display: flex;
-        width: 200px;
-        height: 200px;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        overflow: hidden;
     }
     
     .banner-principal{
         display: flex;
-        width: 3000px;
+        width: 300px;
         height: 300px;
     }
     
