--- a/avaliação individual/assets/css/style.css
+++ b/avaliação individual/assets/css/style.css
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-   *{
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");  
+    
+    *{
         margin: 0;
         padding: 0; 
         font-family: "inter", sans-serif;
         font-optical-sizing: auto;
         font-weight: 600;
         font-style: normal;
+        list-style: none;
     }
     
     header nav{
         background-color: #f2f2f2;
-        padding: 20px 0;
+        padding: 15px 0;
         display: flex; 
         justify-content: space-around;
         align-items: center;
@@ -18,9 +21,10 @@
     
     
     .menu{
+        align-items: center;
         list-style: none;
         display: flex;
-        gap: 40px;
+        gap: 80px;
     }
     
     .menu li a{
@@ -29,38 +33,35 @@
         padding: 8px;
         border-radius: 8px;
         text-transform: uppercase;
-        transition: 0.5s;
+        transition: 1s;
     }
     
     .menu li a:hover{
         background-color: #000000;
         color: rgb(255, 255, 255);
-        transition: 0.5s;
+        transition: 1s;
     }
     
     .logo{
         display: flex;
-       
         width: 80px;
         height: 80px;
+        
     }
 
-    .foto-perfil{
-        display: flex;
-        width: 80px;
-        height: 80px;
-        border-radius: 50%;
-        overflow: hidden;
+    .foto-perfil li a{
+        text-decoration: none;
+        color: #000000;
+        padding: 8px;
     }
     
     .banner-principal{
         display: flex;
-        width: 300px;
-        height: 300px;
+        max-width: 1920px;
+        max-height: 1080px;
+        width: 1920px;
+        height: 843px;
     }
+   
     
-    .sinopse, .img-sinopse {
-        display: flex;
-        width: 300px;
-        height: 300px;
-    }
+   
