--- a/avaliação individual/assets/css/style.css
+++ b/avaliação individual/assets/css/style.css
@@ -21,47 +21,53 @@
     
     
     .menu{
-        align-items: center;
         list-style: none;
         display: flex;
-        gap: 80px;
+        gap:100px;
     }
     
     .menu li a{
         text-decoration: none;
         color: #000000;
         padding: 8px;
-        border-radius: 8px;
+        border-radius: 10px;
         text-transform: uppercase;
-        transition: 1s;
+        transition: 0.8s;
     }
     
     .menu li a:hover{
         background-color: #000000;
         color: rgb(255, 255, 255);
-        transition: 1s;
+        transition: 0.8s;
     }
     
     .logo{
         display: flex;
-        width: 80px;
-        height: 80px;
-        
+        width: 70px;
+        height: 70px;
     }
 
     .foto-perfil li a{
         text-decoration: none;
         color: #000000;
         padding: 8px;
+        font-size: 35px;
     }
     
-    .banner-principal{
+    .banner-principal img{
         display: flex;
+        width: 100%;
+        height: 682px;
         max-width: 1920px;
         max-height: 1080px;
-        width: 1920px;
-        height: 843px;
+
     }
    
-    
-   
+    .img-sinopse{
+        display: flex;
+        width: 100%;
+        max-width: 1200px;
+        height: 600px;
+        padding: 30px 0px; 
+        box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.1); /* Sombra para o container */
+    }
