--- a/avaliação individual/assets/css/style.css
+++ b/avaliação individual/assets/css/style.css
@@ -12,7 +12,7 @@
     }
     
     header nav{
-        background-color: #E2E2E2;
+        background-color: white;
         padding: 20px 0;
         display: flex; 
         justify-content: space-around;
@@ -31,14 +31,14 @@
         color: #000000;
         padding: 8px;
         text-transform: uppercase;
-        transition: 0.8s;
+        transition: 0.6s;
         border-radius: 10px;
     }
     
     .menu li a:hover{
         background-color: #000000;
         color: rgb(255, 255, 255);
-        transition: 0.8s;
+        transition: 0.6s;
         border-radius: 10px;
     }
     
@@ -81,7 +81,7 @@
         display: flex;
         align-items: center;
         width: 100%; /* Largura total */
-        padding: 120px 0 0 0;
+        padding: 50px 0 0 0;
     }
     
     .text{
@@ -100,7 +100,7 @@
     text-transform: uppercase;
     display: flex;
     justify-content: center;
-    padding-top: 150px;
+    padding-top: 100px;
     padding-bottom: 60px;
     text-align: center;
     font-weight: 700;
@@ -159,7 +159,7 @@
 /* Estilização da descrição do card */
 #carros-destaque figcaption p {
     line-height: 1.4; /* Ajusta do espaçamento entre linhas para reduzir o espaço */
-    overflow: hidden; /* Esconde o restante da descrição quando passar de 3 linhas */
+    overflow: hidden; /* Esconde o restante da descrição quando passar de 4 linhas */
     
 }
 
@@ -170,3 +170,6 @@
     -webkit-box-orient: vertical;
 }
 
+.container-local h3{
+    text-transform: uppercase;
+}
