--- a/avaliação individual/assets/css/form.css
+++ b/avaliação individual/assets/css/form.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +8,7 @@
 .container-local {
     display: flex; /* Usar flexbox para o layout */
     justify-content: center; /* Centraliza o conteúdo horizontalmente */
-    margin-top: 200px;
+    margin-top: 150px;
     gap: 50px; /* Espaçamento entre o formulário e o mapa */
 }
 
@@ -42,7 +43,7 @@ input[type="tel"] {
 }
 
 input[type="submit"] {
-    padding: 10px 170px; /* Espaçamento interno do botão */
+    padding: 10px 174px; /* Espaçamento interno do botão */
     font-size: 14px; /* Tamanho da fonte do botão */
     background-color: #28a745; /* Cor de fundo do botão */
     color: white; /* Cor do texto do botão */
