--- a/avaliação individual/assets/css/rodape.css
+++ b/avaliação individual/assets/css/rodape.css
@@ -11,9 +11,9 @@
 }
 
 #rodape {
-    margin-top: 180px; /* Espaço de 200px do topo */
+    margin-top: 100px; /* Espaço de 100px do topo */
     background-color: #e2e2e2; /* Cor de fundo do rodapé */
-    padding: 50px 0;
+    padding: 30px 0px 30px 0px;
 }
 
 .footer {
@@ -23,10 +23,8 @@
 }
 
 .colunas-rodape {
-    flex: 1 1 22%; /* As colunas ocupam 22% da largura da tela */
-    padding: 0 20px; /* Adiciona padding interno nas colunas */
+    padding: 0 100px; /* Adiciona padding interno nas colunas */
     text-align: center; /* Centraliza o conteúdo nas colunas */
-    margin-bottom: 20px; /* Espaçamento inferior entre as colunas */
 }
 
 .colunas-rodape h4 {
@@ -34,25 +32,23 @@
 }
 
 /* Para telas menores (até 768px de largura) */
-@media (max-width: 1200px) {
+@media (max-width: 1080px) {
+    * {
+        margin: 0;
+        padding: 0;
+        gap: 0;
+    }
+
     .footer {
-        gap: 30px; /* Reduz o espaçamento entre as colunas */
+        display: flex;
+        gap: 10px; /* Reduz o espaçamento entre as colunas */
         justify-content: center; /* Centraliza as colunas */
     }
 
-    .colunas-rodape {
-        flex: 1 1 45%; /* Cada coluna ocupa 45% da largura da tela em dispositivos médios */
-    }
+  .colunas-rodape {
+    padding: 0 30px; /* Adiciona padding interno nas colunas */
+    text-align: center; /* Centraliza o conteúdo nas colunas */
+}
 }
 
-/* Para telas muito pequenas (até 480px de largura) */
-@media (max-width: 480px) {
-    .footer {
-        gap: 10px; /* Diminui o espaçamento entre as colunas */
-        justify-content: center; /* Centraliza as colunas */
-    }
 
-    .colunas-rodape {
-        flex: 1 1 100%; /* Cada coluna ocupa 100% da largura da tela */
-    }
-}
