--- a/avaliação individual/assets/css/form.css
+++ b/avaliação individual/assets/css/form.css
@@ -85,19 +85,20 @@ form h3{
     }
 
     .form-group input[type="text"],
-    .form-group input[type="email"],
-    .form-group input[type="tel"]{
-        width: 94%; /* Deixa os campos de texto ocuparem toda a largura */
+    .form-group input[type="email"]{
+        width: 100%; /* Deixa os campos de texto ocuparem toda a largura */
     }
     
     #assunto{
         padding: 40px;
     }
 
-    
+    .form-group input[type="tel"]{
+        width: 95%;
+    }
 
     .form-group input[type="date"]{
-        width: 85%;
+        width: 95%;
     }
 
     
